Fixed spacing.

--- a/packages/commonwealth/client/scripts/views/components/MarkdownEditor/toolbars/DesktopEditorFooter.scss
+++ b/packages/commonwealth/client/scripts/views/components/MarkdownEditor/toolbars/DesktopEditorFooter.scss
@@ -4,7 +4,7 @@
   color: $neutral-500;
 
   display: flex;
-  padding: 8px;
+  padding: 6px;
 
   user-select: none;
 
@@ -12,7 +12,7 @@
     display: flex;
     margin-top: auto;
     margin-bottom: auto;
-    margin-left: 8px;
+    gap: 6px;
 
     button {
       outline: none;
