--- a/packages/commonwealth/client/scripts/views/components/MarkdownEditor/toolbars/FileUploadButton.scss
+++ b/packages/commonwealth/client/scripts/views/components/MarkdownEditor/toolbars/FileUploadButton.scss
@@ -25,7 +25,7 @@
 
   .IconAndText {
     display: flex;
-    gap: 8px;
+    gap: 4px;
 
     div {
       margin: auto auto;
